2010-02-20  Albrecht Dreß

	* src/folder-conf.c (folder_conf_imap_sub_node): use Cyrus
	server's standard names for rights.

2010-02-20  Pawel Salek

	* libbalsa/gmime-gpgme-signature.c: add missing #include config.h
	that broke rawhide build.
	* libbalsa/imap/imap-commands.c: issue SELECT+MYRIGHTS together
	whenever necessary to save one RTT.
	* libbalsa/imap/imap-handle.c: add imap_cmd_exec_cmds() helper.
	* libbalsa/imap/imap_private.h: and its prototype.

2010-02-19  Peter Bloomfield

	* configure.in: option to configure GMime-2.4 or 2.6.
	* libbalsa/gmime-gpgme-context.c (g_mime_gpgme_context_finalize),
	(g_mime_session_passphrase), (g_mime_gpgme_context_new):
	* libbalsa/gmime-gpgme-context.h: use it.
	* libbalsa/gmime-stream-gio.c: ditto.
	* libbalsa/mailbox_mbox.c: ditto.
	* libbalsa/rfc3156.c (password_request_func),
	(libbalsa_sign_mime_object), (libbalsa_encrypt_mime_object),
	(libbalsa_body_check_signature), (libbalsa_body_decrypt),
	(libbalsa_rfc2440_sign_encrypt), (libbalsa_rfc2440_verify),
	(libbalsa_rfc2440_decrypt): ditto.

2010-02-17  Albrecht Dreß

	* libbalsa/imap/imap-commands.c: implement QUOTA, MYRIGHTS and GETACL
	commands.
	* libbalsa/imap/imap-handle.h: register QUOTA capability.
	* libbalsa/imap/imap_private.h: add private fields and enums
	related to these extensions.
	* libbalsa/mailbox_imap.[ch]: interface them.
	* src/folder-conf.c: use them.

2010-02-16  Albrecht Dreß

	* libbalsa/information.c: build when libnotify is not available.

2010-02-16  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_cid),
	(libbalsa_message_body_save_temporary),
	(libbalsa_message_body_get_by_id): strip "<>" from content-id.

2010-02-13  Pawel Salek

	* configure.in, NEWS: release 2.4.7

2010-02-12  Albrecht Dreß

	* src/balsa-message.c (bm_previous_part_info): do not return
	uninitialized BalsaPartInfo.

2010-02-09  Albrecht Dreß

	* configure.in: more understandable output from html-widget
	configuration.

2010-02-05  Peter Bloomfield
